# Wasmpot

./: .gitignore  17_Cyber_Wasmpot2_MatriceRisques.xlsx  17_Cyber_Wasmpot2_RACI.xlsx  17_Cyber_Wasmpot2_WBS.docx  README.md  reverse_proxy.py  scrapper_logs.py  server_log_es.py  server_logs.py  serveur_logs.py
Documents/: 17_Cyber_Wasmpot2_CharteProjet.docx  17_Cyber_Wasmpot2_Gaant.xlsx  17_Cyber_Wasmpot2_ReccueilExigences.docx
microservices/actix_server/: Cargo.toml  dockerfile
microservices/actix_server_engine/: Cargo.toml  dockerfile  push_images.sh  run_image.sh
microservices/keycloak/logical-server/: Cargo.toml  bash_sonde.sh  dockerfile  push_images.sh  run_image.sh
microservices/keycloak/logical-server/src/: main.rs  rules.rs
microservices/log_server/: Cargo.toml
microservices/log_server/src/: main.rs
microservices/wasi_server/: Cargo.toml  dockerfile
microservices/wasi_server copy/: Cargo.toml  dockerfile
microservices/wasi_server_engine/: Cargo.toml  dockerfile  run_image.sh
rust_server/: Cargo.toml
rust_server/src/: functions.rs  main.rs
server_config/: Actix_deployment.yml  Actix_service.yml  Firecracker_vm.sh  Get_ready_firecracker.sh  Get_ready_honeypot.sh  README.md  Set_up_vm.sh  Wasi_service.yml  ipAddressPool  kube-vip  wasi_deployment.yml
server_config/ELK_Install/: README.md  README_en.md  README_fr.md
server_config/firecracker/: configmap-firecracker.yaml  firecracker-vm-pod.yaml  firecracker-vm-service.yaml  firecracker.sh  init.sh
wasmpot_builder/: requirements.txt  todo.txt  wp_builder.py  wp_builder_v2.py
(+761 files in other folders)
