[package]
name = "log_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
bytes = "1.0.1"
futures = "0.3.18"
env_logger = "0.11"
log = "0.4.20"
actix-logger = "0.4.1"  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
async-trait = "0.1.50"
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.11"
prometheus = "0.13.3"
prometheus-static-metric = "0.5.1"
lazy_static = "1.4.0"
derive_more = "0.99.11"
